fix a number of compiler warnings, especially use of Java API that has been deprecated
Signed-off-by: Johannes Echterhoff <echterhoff@interactive-instruments.de>